--- a/CurrentPlaceDetailsOnMap/app/src/main/res/layout/activity_maps.xml
+++ b/CurrentPlaceDetailsOnMap/app/src/main/res/layout/activity_maps.xml
@@ -1,7 +1,66 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.currentplacedetailsonmap.MapsActivityCurrentPlace" />
+    android:orientation="vertical">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.currentplacedetailsonmap.MapsActivityCurrentPlace" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/start_button"
+        android:textSize="20sp"
+        android:background="#359c5e"
+        android:textColor="#ffffff"
+        android:layout_gravity="top|start"/>
+    <!-- android:id="@+id/stop_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="330dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#9C3535"
+        android:layout_gravity="top"
+        android:padding="8dp"
+        android:text="Stop"
+        android:textColor="#ffffff" /> -->
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop"
+        android:id="@+id/stop_button"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:background="#9C3535"
+        android:layout_gravity="top|end"/>
+    <!--<Button
+        android:id="@+id/start_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="288dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#359c5e"
+        android:layout_gravity="top"
+        android:padding="8dp"
+        android:text="Start"
+        android:textColor="#ffffff" />
+    -->
+
+</FrameLayout>
